src/components/sections/styles/articles.css
.articles {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.articles-container {
  height: 70vh;
  display: flex;
  flex-flow: row wrap;
  overflow-x: hidden;
  overflow-y: auto;
}

.article-card {
  padding: 0.5rem 2rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
  transition: background 0.3s ease, transform 0.3s ease;
  width: 100%;
  color: white;
}

.article-card:hover {
  background: rgba(66, 69, 73, 0.2);
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  transform: translateX(4px);
}

.content-wrapper {
  margin: 1rem;
}

.title {
  font-size: clamp(0.7rem, 2.5vw, 1.3rem);
}

.subtitle {
  font-size: clamp(0.5rem, 2.5vw, 1rem);
}

/* ≥ 320px: mobile size */
@media (min-width: 320px) {
  .articles-container {
    margin: 0 2rem 0 2rem;
    width: 90%;
  }
  .article-card {
    max-height: 7rem;
  }
}

/* ≥ 1024px: Small Desktops */
@media (min-width: 1024px) {
  /* Desktop styles */
  .articles-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 70%;
  }
  .article-card {
    max-height: 7rem;
  }
}

/* ≥ 1440px: Large Screens */
@media (min-width: 1440px) {
  /* Widescreen styles */
  .articles-container {
    justify-content: space-between;
    width: 50%;
  }
  .article-card {
    max-height: 7rem;
  }
}
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: rgba(255, 255, 255, 0.05);
  border-radius: 20px;
}

::-webkit-scrollbar-thumb {
  background: rgba(66, 69, 73);
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.7);
}

